<resources>
    <string name="app_name">PVT Training</string>
    <string name="left_text">Left text</string>
    <string name="right_text">Right text</string>
    <string name="changer" translatable="false">changer</string>
    <string name="text1">TEXT1</string>
    <string name="text2">TEXT2</string>
    <string name="enter_passwd">Enter passwd</string>
    <string name="enter_login">Enter login</string>
    <string name="dz1">dz1</string>
    <string name="dz2">dz2</string>
    <string name="dz3">dz3</string>
    <string name="cw_2">CW 2</string>
    <string name="download">Download</string>
    <string name="temp_url">https://square.github.io/picasso/static/sample.png</string>
    <string name="get_state">Get state</string>
    <string name="save">Save</string>
    <string name="cancel">cancel</string>
    <string name="person_list">Persons list</string>
    <string name="remove">Remove</string>
    <string name="new_person">New person</string>
    <string name="create">Create</string>
    <string name="edit_person">Edit person</string>
</resources>
