<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left_text"
        android:textSize="30sp"
        android:layout_gravity="left"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/tvRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_text"
        android:textSize="30sp"
        android:layout_gravity="right"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/bg_button"
        android:text="@string/changer"/>



</FrameLayout>